--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</ul>	
 &nbsp;
 <ul class="bullet">
-<li class="head">MY SKILLS</b></li>
+<li class="head">SPECIAL SKILLS</b></li>
 </ul>
 	<ol>
 	<li>Can communicate using English and Filipino Language</li>
