--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<li>Can arrange the files and documentations properly</li>
 	<li>Can arrange the files and documentations properly</li>
 	<li>Capable of working under pressure</li>
-	</li>Hardworking, persistent</li>
+	<li>Hardworking, persistent</li>
 	</ol>
 &nbsp;
 <ul class="bullet">
